--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "django>=5.2.6",
     "psycopg2-binary>=2.9.10",
+    "reportlab>=4.4.4",
+    "weasyprint>=66.0",
 ]
 
 [dependency-groups]
